# ADK-workshop

./: .gitignore  README.md  README.ru.md  pyproject.toml  requirements.txt  slides.pptx  verify_setup.py  workshop_notebook.ipynb  workshop_plan.md
checkpoints/03_first_agent/: README.md
checkpoints/03_first_agent/my_first_agent/: .env.example  agent.py  eval_set_1.evalset.json
checkpoints/04_tools/: README.md
checkpoints/04_tools/my_first_agent/: .env.example  agent.py
checkpoints/05_memory_sessions/: README.md  run_session_demo.py
checkpoints/05_memory_sessions/my_first_agent/: agent.py
checkpoints/06_streaming/: README.md  streaming_demo.py
checkpoints/06_streaming/my_first_agent/: agent.py
checkpoints/07_callbacks/: README.md
checkpoints/07_callbacks/my_first_agent/: agent.py
checkpoints/08_sub_agents_mcp/: README.md
checkpoints/08_sub_agents_mcp/my_first_agent/: agent.py
checkpoints/09_evaluation/: README.md
checkpoints/09_evaluation/my_first_agent/: agent.py
checkpoints/09_evaluation/my_first_agent/tests/: basic.evalset.json  test_agent.py
checkpoints/10_final/: README.md
checkpoints/10_final/my_first_agent/: agent.py
